Create test-utils module for more easily testing formulas
Some refactoring of the code from impl/src/main into api for better reuse
Move some utils to their own method in the api module
Move SQL-specific stuff to com.force.formula.sql
Move reusable test functionality to test-utils module so that callers can use the same test code
Reduce test threshold to .65 for now (and .25 in api)

update